--- a/markdown-preview/index.html
+++ b/markdown-preview/index.html
@@ -4,22 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First React App</title>
+    <title>A Markdown Previewer</title>
     <!-- CDN 方式引入 React -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <!-- 引入Babel -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <!-- 引入css样式 -->
-    <link rel="stylesheet" href="src/components/lists/lists-style.css" />
     <link rel="stylesheet" href="src/components/editor/editor-style.css">
     <link rel="stylesheet" href="src/components/preview/preview-style.css">
 </head>
 <body>
     <div id="root"></div>
     <!-- 引入组件 -->
-    <script type="text/babel" src="src/components/lists/lists-component.jsx"></script>
-    <script type="text/babel" src="src/components/input/input-component.jsx"></script>
     <script type="text/babel" src="src/App.js"></script>
     <script type="text/babel" src="src/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.2.5/marked.min.js" integrity="sha512-5JZDwulT+S/K8p/KO4tikNKA5t6Ebb+tqPwT7Ma+lVpJuS4G+Z0lSktWcl8hymXeFqCprGEuKGOCrKjyulql/A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
